tests/rosetta/out/Smalltalk/call-a-function-11.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| zeroval x zeroptr main i tmp box |
zeroval := [:ival | x := ival.
x := 0.
x. ].
zeroptr := [:ref | ref at: 0 put: 0. ].
main := [ i := 1.
Transcript show: ((('initial: ') + ((i asString)))) printString; cr.
tmp := zeroval value: i.
Transcript show: ((('zeroval: ') + ((i asString)))) printString; cr.
box := {i}.
zeroptr value: box.
i := box at: 0.
Transcript show: ((('zeroptr: ') + ((i asString)))) printString; cr.
Transcript show: 'pointer: 0'; cr. ].
main value.
